@@ -1,7 +1,9 @@
 What's New in IDLE 3.1.4?
 =========================
 
-*Release date: 15-May-11*
+*Release date: XX-XXX-11*
+
+- Issue #11896: Save on Close failed despite selecting "Yes" in dialog.
 
 - Issue #1028: Ctrl-space binding to show completions was causing IDLE to exit.
   Tk < 8.5 was sending invalid Unicode null; replaced with valid null.
